# trackingcounties

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  config.json  pyproject.toml  requirements.txt  trackingcounties.Rmd
.github/workflows/: update-plots.yml
app/: app.py  config.json  local_counties_hash.txt
data/: list_of_counties_active.csv  list_of_counties_blank.csv  list_of_states_blank.csv
data/shapefiles/: README.md
data/tables/: list_of_counties_active.csv  list_of_states_active.csv
data/tables/archive/: README.md  list_of_counties_active_2023-12-17T21:36:10.csv
data/trips/: 2026-04-21__san_antonio.md  README.md
environment/: README.md  capture.sh  requirements.txt
notebooks/generate_data/: 01_generate_visit_records_with_shapefiles.ipynb  README.md  prepare_shapefiles.ipynb  update_county_tracking_table.ipynb
notebooks/main/: 00_scratch.ipynb  01_counties.ipynb  01_execute.ipynb  README.md  trackingcounties.Rmd  trackingcounties.html  trackingcounties_orignal.Rmd
notebooks/main/archive/: trackingcounties.Rmd
pages/: 1_Interactive_Map.py  2_Data_Table.py  3_Static_Plots.py
scripts/: README.md
scripts/archive/: README.md
src/: Makefile  config.py  generate_plots.py  setup.cfg
src/scripts/: data.py  mapping.py  misc.py  plotting.py  processing.py
src/tracking_counties/: __init__.py  config.py  main.py
src/tracking_counties/scripts/: data.py  misc.py  plotting.py  processing.py
tracking_counties/: Makefile
tracking_counties/tracking_counties/: __init__.py  config.py  main.py
tracking_counties/tracking_counties/scripts/: data.py  mapping.py  misc.py  plotting.py  processing.py
