[project]
name = "tracking-counties"
version = "0.1.0"
description = "Streamlit app to track counties visited."
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Targets the stable 3.12 range
license = { text = "MIT" }
authors = [
    { name = "Evan Canfield" }
]

dependencies = [
    "streamlit==1.50.0",
    "siuba==0.4.2",
    "pandas==2.3.3",
    "numpy==2.3.4",
    "folium==0.20.0",
    "streamlit_folium==0.25.3",
    "openpyxl==3.1.5",
    "geopandas>=1.1.2",
    "plotnine>=0.15.3",
]

[project.optional-dependencies]
dev = [
    "ruff",      # Linting
    "black",     # Formatting
    "cmake",
]

[project.scripts]
app = "streamlit.web.cli:main"

[tool.ruff]
line-length = 88
extend-select = ["I"]
fix = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv]
package = false
