[project]
name = "tracking-counties"
version = "0.1.0"
description = "Streamlit app to track counties visited."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Evan Canfield" }
]

dependencies = [
    "streamlit>=1.54.0",
    "siuba==0.4.2",
    "pandas==2.3.3",
    "numpy==2.3.4",
    "folium==0.20.0",
    "streamlit_folium==0.25.3",
    "openpyxl==3.1.5",
    "geopandas>=1.1.2",
    "plotnine>=0.15.3",
    "pygris>=0.2.1",
    "pillow>=12.2.0",
    "requests>=2.33.0",
    "tornado>=6.5.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "cmake",
]

[project.scripts]
app = "streamlit.web.cli:main"

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = false
